[package]
authors = ["drew@commonwealth.im"]
edition = "2018"
name = "pallet-clsag"
version = "2.0.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
safe-mix = { default-features = false, version = "1.0.0" }

[dependencies.frame-support]
default-features = false
version = "2.0.0"
git = "https://github.com/paritytech/substrate.git"

[dependencies.frame-system]
default-features = false
version = "2.0.0"
git = "https://github.com/paritytech/substrate.git"

[dependencies.sp-io]
default-features = false
version = "2.0.0"
git = "https://github.com/paritytech/substrate.git"

[dependencies.sp-runtime]
default-features = false
version = "2.0.0"
git = "https://github.com/paritytech/substrate.git"

[dependencies.sp-std]
default-features = false
version = "2.0.0"
git = "https://github.com/paritytech/substrate.git"

[dependencies.sha2]
version = "0.8"
default-features = false

[dependencies.merlin]
version = "2.0.0"
default-features = false

[dependencies.curve25519-dalek]
# git = "https://github.com/dalek-cryptography/curve25519-dalek"
version = "2.0"
default-features = false
features = ["u64_backend", "alloc"]

[dependencies.bencher]
version = "0.1.5"

[dev-dependencies.sp-core]
default-features = false
version = "2.0.0"
git = "https://github.com/paritytech/substrate.git"

[dependencies.rand]
version = "0.7.3"
optional = true

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"safe-mix/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-io/std",
	"rand/std",
]

[[bench]]
name = "bench"
harness = false