[package]
name = "webb-currencies"
description = "Provide `MultiCurrency` implementation using `pallet-balances` and `webb-tokens` module."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/currencies"
license = "Apache-2.0"
version = "3.0.0"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4", default-features = false }
sp-io = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4", default-features = false }
sp-std = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4", default-features = false }

frame-support = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4", default-features = false }
frame-system = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4", default-features = false }

webb-traits = { path = "../traits", default-features = false }
webb-utilities = { path = "../utilities", default-features = false }

funty = { version = "=1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105
frame-benchmarking = { default-features = false, version = "3.0.0", optional = true, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }

[dev-dependencies]
sp-core = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-balances = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
webb-tokens = { path = "../tokens" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",
	"webb-traits/std",
	"webb-utilities/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]
