[package]
authors = ["Drew Stone <drew@commonwealth.im>, Filip Lazovic"]
description = "Merkle tree membership pallet with zero-knowledge membership proof verification"
edition = "2018"
license = "Unlicense"
name = "pallet-merkle"
version = "3.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
balances = { version = "3.0.0", default-features = false, package = "pallet-balances", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
frame-support = { default-features = false, version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
frame-system = { default-features = false, version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-std = { default-features = false, version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-runtime = { default-features = false, version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
merlin = { version = "2.0.0", default-features = false }
sha2 = { version = "0.9.1", default-features = false }

rand_chacha = { version = "0.2", default-features = false }

serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { default-features = false, version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-io = { default-features = false, version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
frame-benchmarking = { default-features = false, version = "3.0.0", optional = true, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[dependencies.curve25519-dalek]
version = "3.0.0"
default-features = false
features = ["u64_backend", "alloc"]

[dependencies.bulletproofs]
version = "2.0.3"
package = "webb-bulletproofs"
default-features = false
features = ["yoloproofs"]

[dependencies.bulletproofs-gadgets]
version = "2.1.1"
default-features = false

[dev-dependencies]
sp-core = { default-features = false, version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }

[features]
default = ["std"]
std = [
    "serde",
    "sp-runtime/std",
    "sp-io/std",
    "sp-std/std",
    "balances/std",
    "codec/std",
    "bulletproofs/std",
    "bulletproofs-gadgets/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]
