[package]
authors = ['Drew Stone <drew@commonwealth.im>, Filip Lazovic']
description = 'Pallet for mixing native assets in a zero-knowledge mixer'
edition = '2018'
license = 'Unlicense'
name = 'pallet-mixer'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
balances = { version = "3.0.0", default-features = false, package = "pallet-balances" }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = "3.0.0" }
sp-runtime = { default-features = false, version = '3.0.0' }
merkle = { package = "pallet-merkle", path = "../merkle", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
bulletproofs = { version = "2.0.0", branch = "main", git = "https://github.com/edgeware-builders/bulletproofs", default-features = false, features = ["yoloproofs"] }
merlin = { version = "2.0.0", default-features = false }
frame-benchmarking = { default-features = false, version = "3.0.0", optional = true }

[dependencies.curve25519-gadgets]
rev = "4028605"
version = "2.0.0"
git = "https://github.com/webb-tools/bulletproof-gadgets"
default-features = false

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = "2.0.0"

[dependencies.curve25519-dalek]
version = "3.0.0"
default-features = false
features = ["u64_backend", "alloc"]

[dependencies.bencher]
version = "0.1.5"

[dev-dependencies]
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    "serde",
    "codec/std",
    "balances/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "merkle/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]
