[package]
authors = ["Drew Stone <drew@commonwealth.im>, Filip Lazovic"]
description = "Pallet for mixing native assets in a zero-knowledge mixer"
edition = "2018"
license = "Unlicense"
name = "pallet-mixer"
version = "3.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4.8"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
pallet-balances = { version = "3.0.0", default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
frame-support = { default-features = false, version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
frame-system = { default-features = false, version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-std = { default-features = false, version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-runtime = { default-features = false, version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }

merkle = { package = "pallet-merkle", path = "../merkle", default-features = false }
webb-tokens = { path = "../tokens", default-features = false }

serde = { version = "1.0.101", optional = true, features = ["derive"] }
merlin = { version = "2.0.0", default-features = false }
frame-benchmarking = { default-features = false, version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4", optional = true }
webb-traits = { default-features = false, path = "../traits" }
webb-currencies = { default-features = false, path = "../currencies" }

[dependencies.bulletproofs]
version = "2.0.3"
package = "webb-bulletproofs"
default-features = false
features = ["yoloproofs"]

[dependencies.bulletproofs-gadgets]
version = "2.1.1"
default-features = false

[dependencies.curve25519-dalek]
version = "3.0.0"
default-features = false
features = ["u64_backend", "alloc"]

[dependencies.bencher]
version = "0.1.5"

[dev-dependencies]
sp-core = { default-features = false, version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-io = { default-features = false, version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "pallet-balances/std",
    "frame-support/std",
    "frame-system/std",
    "webb-tokens/std",
    "bulletproofs/std",
    "bulletproofs-gadgets/std",
    "frame-benchmarking/std",
    "merkle/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]
