[package]
name = "pallet-recursion"
version = "2.0.0"
authors = ["Drew Stone <drewstone329@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-pallas = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["base_field", "r1cs", "curve"] }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-r1cs-std = {  git = "https://github.com/arkworks-rs/r1cs-std", default-features = false, optional = true }
ark-std = { git = "https://github.com/arkworks-rs/utils", default-features = false }

ark-marlin = { git = "https://github.com/arkworks-rs/marlin", default-features = false }


balances = { version = "2.0.0", default-features = false, package = "pallet-balances" }
frame-support = { default-features = false, version = "2.0.0" }
frame-system = { default-features = false, version = "2.0.0" }
sp-std = { default-features = false, version = "2.0.0" }
sp-runtime = { default-features = false, version = "2.0.0" }

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "1.3.4"

[dev-dependencies]
sp-core = { default-features = false, version = "2.0.0" }
sp-io = { default-features = false, version = "2.0.0" }

[features]
default = ["std"]
std = [
	"ark-std/std",
	"ark-ff/std",
	"ark-ec/std",
	"ark-pallas/std",
	"ark-r1cs-std",
	"ark-marlin/std",

    "codec/std",
    "frame-support/std",
    "frame-system/std",
]
