[package]
name = "webb-tokens"
version = "3.0.0"
authors = ["Drew Stone <drewstone329@gmail.com>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
pallet-balances = { version = "3.0.0", default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
pallet-treasury = { version = "3.0.0", default-features = false, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
frame-support = { default-features = false, version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
frame-system = { default-features = false, version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-std = { default-features = false, version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-runtime = { default-features = false, version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
frame-benchmarking = { default-features = false, version = "3.0.0", optional = true, git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
webb-traits = { default-features = false, path = "../traits" }

[dependencies.bencher]
version = "0.1.5"

[dev-dependencies]
sp-core = { default-features = false, version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
sp-io = { default-features = false, version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
webb-currencies = { default-features = false, path = "../currencies" }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "pallet-balances/std",
    "pallet-treasury/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "webb-traits/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]
