[package]
name = "webb-traits"
description = "Shared traits including `BasicCurrency`, `MultiCurrency`, `Auction` and more."
license = "Apache-2.0"
version = "3.0.0"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
num-traits = { version = "0.2.14", default-features = false }
impl-trait-for-tuples = "0.2.1"
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4", default-features = false }
sp-io = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4", default-features = false }
sp-std = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4", default-features = false }
frame-support = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4", default-features = false }
webb-utilities = { path = "../utilities", default-features = false }

funty = { version = "=1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"num-traits/std",
	"frame-support/std",
	"webb-utilities/std",
]
runtime-benchmarks = [
]