[package]
name = "pallet-webb-tokens"
version = "0.1.0"
authors = ["Drew Stone <drewstone329@gmail.com>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
balances = { version = "3.0.0", default-features = false, package = "pallet-balances" }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = "3.0.0" }
sp-runtime = { default-features = false, version = '3.0.0' }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
frame-benchmarking = { default-features = false, version = "3.0.0", optional = true }
orml-traits = { version = "0.4.0", default-features = false }
orml-currencies = { version = "0.4.0", default-features = false }
orml-tokens = { version = "0.4.0", default-features = false }

[dependencies.bencher]
version = "0.1.5"

[dev-dependencies]
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    "serde",
    "codec/std",
    "balances/std",
    "frame-support/std",
    "frame-system/std",
    "orml-tokens/std",
    "frame-benchmarking/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]
