[package]
name = "wasm-utils"
version = "0.1.0"
authors = ["Commonwealth <https://github.com/hicommonwealth>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.69"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]