[package]
name = "pallet-merkle-rpc"
version = "3.0.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

[dependencies]
jsonrpc-core = "15"
jsonrpc-core-client = "15"
jsonrpc-derive = "15"
sc-rpc = "3.0.0"

codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }

merkle = { package = "pallet-merkle", path = "../", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "merkle/std",
]
